--- a/Assig1/appsettings.json
+++ b/Assig1/appsettings.json
@@ -9,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ExpiationsContext": "[Your Connection String]"
+    "ExpiationsContext": "Data Source=LAPTOP-QNCDVLAE\\SQLEXPRESS;Initial Catalog=ExpiationsDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
   }
 }
